--- a/src/mdSample/css/_commonx/css/flex.styl
+++ b/src/mdSample/css/_commonx/css/flex.styl
@@ -41,6 +41,8 @@ ss-display-flex-x('.flex-row-wrap', row wrap)
 
 .justify-between
   justify-content: space-between
+.justify-center
+  justify-content: center
 .al-item
   align-items: flex-start
 .al-item-center
