--- a/src/mdSample/css/_commoncss/markdown.styl
+++ b/src/mdSample/css/_commoncss/markdown.styl
@@ -17,7 +17,7 @@
     line-height: 1.3em;
     overflow: auto;
     max-height: 45em
-  pre, .markdown-section>p, table
+  pre, .markdown-section>p, table, , .markdown-section>ul
     margin: 0 0 1em
     color: $md-color-title
 
