--- a/src/mdSample/css/_commonx/cssFunc/modules/modal.styl
+++ b/src/mdSample/css/_commonx/cssFunc/modules/modal.styl
@@ -109,8 +109,8 @@ modal-bg($class = '.ss-bg')
     position:fixed
     top: 0
     left: @top
-    width: 100%;
-    height: 100%;
+    width: 100vw
+    height: 100vh
     overflow: hidden
     background-color: $mask-bg
     z-index: 2
