--- a/src/mdSample/css/_commondoc.styl
+++ b/src/mdSample/css/_commondoc.styl
@@ -19,8 +19,8 @@
 //modal
 @import './_commonx/modules/modal'
 @import './_commonx/css/_animate'
-// //加载动画
-// @import './_commonx/modules/load/index'
+//加载动画
+@import './_commonx/modules/load/index'
 // //tabs组件
 // @import './_commonx/modules/tabs/index'
 // //upload上传组件
@@ -49,6 +49,7 @@ body
 .page
   max-width: 840px
   margin: 0 auto 100px
+  position: relative
 
 [title='站长统计']
   font-size: 12px
