--- a/src/mdSample/js/minip/minip.styl
+++ b/src/mdSample/js/minip/minip.styl
@@ -2,3 +2,20 @@
 @import '../../css/_commonx/config/codetheme/black'  //代码块模版
 @import '../../css/_commonx/cssFunc/pages/routerconfig/routerStyle3'        //左边菜单列表模板
 @import '../../css/_commondoc'                      //各系统公用部分
+
+.minip-demos
+  width 100%
+  height 200px
+  box-sizing border-box
+  display flex
+  li
+    flex 1 0 auto
+    list-style none
+    img
+      height 100%
+      width auto
+
+.demo-img
+  width 300px
+  margin-bottom 1rem
+  
