--- a/src/mdSample/js/saui/index.styl
+++ b/src/mdSample/js/saui/index.styl
@@ -3,6 +3,10 @@
 @import '../../css/_commonx/cssFunc/pages/routerconfig/routerStyle2'        //左边菜单列表模板
 @import '../../css/_commondoc'                      //各系统公用部分
 
+@import '../../css/_commonx/modules/table'        //table
+@import '../../css/_commonx/css/width'        //width
+
+
 @media (max-width: 768px)
   .router-container
     .demo-grid
@@ -10,6 +14,10 @@
         width: calc(100% / 2)
 
 //业务
+.pages-title-sm
+  font-size: $size-title-lg
+  margin: 40px 0 10px;
+
 .pages-title-lg
   color: $color-primary
   font-size: $size-title-lg
