--- a/src/mdSample/css/_commonx/config/icon.styl
+++ b/src/mdSample/css/_commonx/config/icon.styl
@@ -18,7 +18,7 @@ $arrow-left = '\e7a9'
 $arrow-right = '\e7aa'
 
 //加载
-$icon-loading = '\e7c1'
+$icon-loading = '\e609'
 
 //waning
 $icon-warning = '\e7b9'
