--- a/src/mdSample/css/_commonx/config/icon copy.styl
+++ b/src/mdSample/css/_commonx/config/icon copy.styl
@@ -26,6 +26,8 @@ $icon-warning = '\e7b9'
 $icon-fail = '\e7b8'
 //sucess
 $icon-sucess = '\e7b7'
+//sucess
+$icon-info = '\e7b6'
 
 //关闭 大
 $icon-del = '\e7a7'
