--- a/src/mdSample/css/_commonx/config/index.styl
+++ b/src/mdSample/css/_commonx/config/index.styl
@@ -45,6 +45,11 @@ $icon-dist = 8px                      //文字与图标之前的距离
 $padding = 6px 20px
 $padding-sm = 6px $space-small
 
+$ab-tr = {
+  top: 6px
+  right: $space-small
+}
+
 /*
   圆角
 */
@@ -90,7 +95,7 @@ btn-default = {
 btn-lg = {
   padding: 0 50px
   line-height: 50px
-  font-size: $size-lg
+  font-size: $size-title
   font-weight: bold
 }
 btn-sm = {
@@ -211,6 +216,8 @@ $tips-icon-sucess = $icon-sucess
 $tips-icon-sucess-color = $color-aux-success 
 $tips-icon-fail = $icon-fail
 $tips-icon-fail-color = $color-aux-fail 
+$tips-icon-info = $icon-info
+$tips-icon-info-color = $color-aux-info 
 $tips-icon-size = 24px
 $tips-icon-size-sm = 16px   //表单性提示
 $tips-size = $size 
