--- a/src/mdSample/css/_commonx/css/custom.styl
+++ b/src/mdSample/css/_commonx/css/custom.styl
@@ -15,6 +15,11 @@ body
 .ss-icon-left
   margin-left: $icon-dist
 
+.ss-hr
+  height: 1px 
+  width: 100%
+  background: $color-line
+
 //文字链接
 [class*='link'], a
   cursor: pointer
