--- a/src/mdSample/css/_commonx/css/height.styl
+++ b/src/mdSample/css/_commonx/css/height.styl
@@ -1,58 +1,17 @@
 .hei-p100
   height: 100%
-.hei-p100-x
-  height: 100%
   box-sizing: border-box
 
-// .hei-v100
-//   height: 100vh
-// .hei-p70
-//   height: 70%
-// .hei-p30
-//   height: 30%
 
-// .hei-60-r
-//   height: 60rpx
-// .hei-70-r
-//   height: 70rpx
-// .hei-72-r
-//   height: 72rpx
-// .hei-90-r
-//   height: 90rpx
-// .hei-104-r
-//   height: 104rpx
-// .hei-120-r
-//   height: 120rpx
-// .hei-152-r
-//   height: 152rpx
-// .hei-160-r
-//   height: 160rpx
-// .hei-166-r
-//   height: 166rpx
-// .hei-257-r
-//   height: 257rpx
-// .hei-350-r
-//   height: 350rpx
-// .hei-458-r
-//   height: 458rpx
-// .hei-469-r
-//   height: 469rpx
-
-
-// .hei-346-r-m
-//   max-height: 346rpx
-
-// .lhei-30-r
-//   line-height: 30rpx
-// .lhei-40-r
-//   line-height: 40rpx
-// .lhei-50-r
-//   line-height: 50rpx
-// .lhei-60-r
-//   line-height: 60rpx
-// .lhei-70-r
-//   line-height: 70rpx
-// .lhei-88-r
-//   line-height: 88rpx
-// .lhei-104-r
-//   line-height: 104rpx
+.leading-none
+  line-height: 1;
+.leading-tight
+  line-height: 1.25;
+.leading-snug
+  line-height: 1.375;
+.leading-normal
+  line-height: 1.5;
+.leading-relaxed
+  line-height: 1.625;
+.leading-loose
+  line-height: 2;
