--- a/src/mdSample/css/_commonx/css/margin.styl
+++ b/src/mdSample/css/_commonx/css/margin.styl
@@ -16,17 +16,13 @@
 .m-auto
   margin: 0 auto
 
-.mb-defalut
+.mb-default
   margin-bottom: $space-minor
+.mt-default
+  margin-top: $space-minor
 
 .mr-auto
   margin-right: auto
-
-.mt20
-  margin-top: 20px
-
-.mb10
-  margin-bottom: 10px
 
 .ml-auto
   margin-left: auto
