--- a/src/mdSample/css/_commonx/css/size.styl
+++ b/src/mdSample/css/_commonx/css/size.styl
@@ -1,16 +1,17 @@
 /*
   字体大小
 */
-.size-title-sm
-  font-size: $size-title-sm
+
 
 .size
   font-size: $size
 .size-sm
   font-size: $size-sm
-.size-lg
-  font-size: $size-lg
+.size-info
+  font-size: $size-info
 
+.size-title-sm
+  font-size: $size-title-sm
 .size-title
   font-size: $size-title
 .size-title-lg
