--- a/src/mdSample/js/app/app.styl
+++ b/src/mdSample/js/app/app.styl
@@ -10,7 +10,7 @@
   display flex
   li
     flex 1 0 auto
-    list-style none !important
+    list-style none
     img
       height 100%
       width auto
